# serialization_benchmarks

./: .gitmodules  CMakeLists.txt  README.md  TestData.h  Utility.cpp  Utility.h  test_bitsery.cpp  test_bitsery_bitpacking.cpp  test_boost.cpp  test_cereal.cpp
